# cx-intelligence-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  WRITEUP.md  alembic.ini  docker-compose.yml  pyproject.toml
data/processed/: data-artifacts.RESTORE.md  data-artifacts.tgz.sha256
docker/: Dockerfile
docker/adminer/: autologin-router.php
docker/initdb/: 01-enable-pgvector.sql
docs/: ARCHITECTURE_DECISIONS.md  IMPLEMENTATION_PLAN.md  PHASE2-INGESTION.md  PHASE3-UNDERSTANDING.md  PHASE4-ANOMALIES.md  PHASE5-KNOWLEDGE.md  PHASE6-RESOLUTION.md  PROMPT_LIBRARY.md
docs/diagrams/: figure-1-overall-architecture.mmd  figure-2-issue-extraction-growth.mmd  figure-3-resolution-assistant-pipeline.mmd
evals/baseline/: evaluation-baseline.json
migrations/: env.py
notes/: DESIGN_DECISIONS.md
tests/: conftest.py  test_anomaly.py  test_anomaly_detector.py  test_api.py  test_cli_ingest.py  test_embeddings.py  test_evaluation_api.py  test_evaluation_comparison.py  test_evaluation_golden.py  test_evaluation_metrics.py  test_evaluation_report.py  test_evaluation_runner.py  test_foundation.py  test_import_derived.py  test_ingestion.py  test_knowledge_base.py  test_knowledge_generation.py  test_llm.py  test_onboarding.py  test_pipeline.py  test_pipeline_api.py  test_pipeline_reset.py  test_pipeline_runs.py  test_repositories.py  test_resolution_api.py  test_resolution_assistant.py  test_resolution_context.py  test_resolution_prompt.py  test_static_control_center.py  test_understanding.py  test_understanding_prompt.py  test_understanding_schema.py
(+80 files in other folders)
