[project]
name = "cx-intelligence-platform"
version = "0.1.0"
description = "Conversation Intelligence Platform — understand support conversations, detect emerging issues, and assist agents with RAG."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[project.scripts]
cx = "cx_intel.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cx_intel"]

# --- Ruff (lint + format) -------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# --- mypy (static types) --------------------------------------------------
[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
plugins = ["pydantic.mypy"]

# --- pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
